fix: spacing overlap when string empty

--- a/src/components/base/Tooltip/Tooltip.module.scss
+++ b/src/components/base/Tooltip/Tooltip.module.scss
@@ -1,5 +1,5 @@
 .tooltip {
-  @apply relative block;
+  @apply relative block w-fit;
 
   .tooltipText {
     @apply invisible absolute 
